ingress/trips-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trip-app-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/poi(/|$)(.*)
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/trips(/|$)(.*)
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /api/user(/|$)(.*)
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/user-java(/|$)(.*)
      - backend:
          serviceName: tripviewer-service
          servicePort: 80
        path: /($|.*)
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: poi-ingress-static
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /static(/|$)(.*)
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: poi-ingress-static
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /static(/|$)(.*)
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: poi-ingress-static
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /static(/|$)(.*)
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: poi-ingress-static
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /static(/|$)(.*)
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: poi-ingress-static
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /static(/|$)(.*)
